basic function finish

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# log config
+## log config
 
 # LogLevel=info
 # LogFile=log/backup.log
@@ -6,4 +6,11 @@
 # LogMaxSize=10
 # LogMaxAge=3
 
+## must be set
 Location=./data/
+
+# Webdav=True
+# WebdavRoot=https://webdav.yourdomain.com/dav
+# WebdavUser=user
+# WebdavPassword=password
+# WebdavStoragePath=mc/GTNH-2.7.2/backup
