--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 ## log config
 
 # LogLevel=info
-# LogFile=log/backup.log
+# LogFile=/etc/ftbbackup/backup.log
 # LogMaxBackups=50
 # LogMaxSize=10
 # LogMaxAge=3
